2013-05-08 Mike Blumenkrantz

        * e_fm2_optimal_size_calc returns bool to indicate whether the returned size can be used

2013-03-01 Sebastian Dransfeld

        * Fix sys hibernate by checking raw condition first

2015-03-25 Samuel F. Baggen (Thanatermesis)

		* included improvement in XDG_DATA_DIRS by zmike
		* gettext version should match the one required in efl/elm

2014-08-09 Samuel F. Baggen (Thanatermesis)

		* fix for window border titles and sizes (backports)
		* fix for text that looked "cut" in some elements like wizard buttons (backports)

2014-06-27 Samuel F. Baggen (Thanatermesis)

        * highlight correct keybinding when modifying an existing binding (backports)
        * XDG menu prefix merge fixes (backports)
        * fixed backtraces generating (backports)

2013-12-05 Eduardo Lima (Etrunko)

        * 0.17.6 release

2013-11-26 dieter.e

        * fixed potential crashes when switching desktops and closing windows

2013-11-25 Tom Hacohen

	* Entry: Fixed issues with entry not scrolling to cursor.

2013-11-05 Tom Hacohen

	* wsod: Fixed gdb hangs when generating backtraces.

2013-10-14 Eduardo Lima (Etrunko)
        * 0.17.5 release

2013-10-14 Mike Blumenkrantz

        * Fix event clipping on filemanager icons

2013-09-20 Mike Blumenkrantz

        * Check mouse location when clicking menus, only activate items when clicking in the menu

2013-09-19 Mike Blumenkrantz

        * Fix bug where new files could not be created repeatedly

2013-08-02 Deon Thomas (PrinceAMD)

	* fixed stall on startup because xinerama started before randr (backports).

2013-08-02 Eduardo Lima (Etrunko)

        * 0.17.4 release

2013-05-11 Rafael Antognolli

        * 0.17.3 release

2013-06-17 Mike Blumenkrantz

        * fixed bug where e widgets would not unset focus
        * fixed bug with filemanager setting path with too many spaces when opened from menu

2013-06-10 Mike Blumenkrantz

        * fix remember size/position apply
